--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<title>HI</title>
 </head>
 <body>
-nothing here!
+The safe version (by safe I mean the one before regular deadline) is here \<a href="https://evanyangab.github.io/final_project.html">Final project - Alaska</a>
+
+The better version (which is not only alaska, but the whole america population) is still running
+
+The interactive version I am still building.
 </body>
 </html>
