--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 The safe version (by safe I mean the one before regular deadline) is here \<a href="https://evanyangab.github.io/final_project.html">Final project - Alaska</a>
 
-The better version (which is not only using the data from alaska, but from the whole america population) is still running
+The better version (which is not only using the data from alaska, but from the whole america population) is still running. never mind. my pc refuse to read such large file. not enough memory. And i m lazy to use optimization. :)
 
 The interactive version, after I figure out how to setup a shiny server, will be linked here also. It can be used to generate predicted income by user input.
 </body>
